done with styling

--- a/index.html
+++ b/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Scam 1992</title>
+    
 </head>
+
 <body>
-    <h1>Risk hai to Ishq hai...📈🐂💰💵</h1>
-    <!-- <label for="stock-"></label> -->
-    <input type="number" placeholder="Enter initial price here" id="stock-price">
-    <input type="number" placeholder="Enter Number of stocks here" id="number">
-    <input type="number" placeholder="Enter current price here" id="final-price">
+    <main>
+        <div class="leftside">
+        <h2>Risk hai to Ishq hai...📈🐂💰💵</h2>
+        
+            <input type="number" placeholder="Enter initial price here" id="stock-price">
+            <br>
+            <input type="number" placeholder="Enter Number of stocks here" id="amount">
+            <br>
+            <input type="number" placeholder="Enter current price here" id="final-price">
+            <br>
 
-    <button id="enter">Tell me!</button>
+            <button id="enter">Tell me!</button>
+        </div>
 
+        <div class="rightside">
+            <div id="output-box"></div>
+        </div>
+
+    </main>
 </body>
 <script src="./app.js"></script>
+
 </html>
